--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,8 +37,28 @@ services:
       - POSTGRES_DB=app
     volumes:
       - ./docker/data:/tmp/data
-      # - ./docker/sql:/docker-entrypoint-initdb.d
+      - ./docker/sql:/docker-entrypoint-initdb.d
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-app}"]
       interval: 5s
       retries: 3
+    # image: mysql:8.0
+    # container_name: mysql_db
+    # restart: always
+    # ports:
+    #   - "3306:3306"
+    # environment:
+    #   - TZ=Asia/Tokyo
+    #   - MYSQL_ROOT_PASSWORD=password
+    #   - MYSQL_DATABASE=app
+    #   - MYSQL_USER=app
+    #   - MYSQL_PASSWORD=password
+    # volumes:
+    #   - ./docker/data:/var/lib/mysql
+    #   - ./docker/my.cnf:/etc/mysql/conf.d/my.cnf
+    # command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+    # healthcheck:
+    #   test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+    #   interval: 10s
+    #   timeout: 5s
+    #   retries: 5
