--- a/.github/workflows/updateSwagger.yml
+++ b/.github/workflows/updateSwagger.yml
@@ -22,7 +22,7 @@ jobs:
       run: go install github.com/swaggo/swag/cmd/swag@latest
 
     - name: Generate Swagger docs
-      run: swag init
+      run: swag init --parseDependency --parseInternal
 
     - name: Commit and push changes
       run: |
