--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
-  "cSpell.words": [
-    "gorm",
-    "signin",
-    "signup",
-    "usecase"
-  ]
+  "cSpell.words": ["gorm", "signin", "signup", "usecase"],
+  "editor.formatOnSave": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "[go]": {
+    "editor.defaultFormatter": "golang.go"
+  }
 }
