update: test workflow

--- a/.github/workflows/ci-test.yaml
+++ b/.github/workflows/ci-test.yaml
@@ -1,13 +1,6 @@
 name: Go Test
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-      - develop
+on: workflow_dispatch
 
 jobs:
   test:
