--- a/.github/workflows/ci-atlas.yaml
+++ b/.github/workflows/ci-atlas.yaml
@@ -3,12 +3,16 @@ on:
   push:
     branches:
       - develop
+      - main
     paths:
       - .github/workflows/ci-atlas.yaml
       - 'migrations/*'
   pull_request:
     paths:
       - 'migrations/*'
+    branches:
+      - develop
+      - main
 # Permissions to write comments on the pull request.
 permissions:
   contents: read
