--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
   "cSpell.words": ["gorm", "signin", "signup", "usecase"],
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.rulers": [80],
   "[go]": {
     "editor.defaultFormatter": "golang.go"
-  }
+  },
 }
