--- a/migrations/Makefile
+++ b/migrations/Makefile
@@ -3,7 +3,7 @@ migrate-up:
 	docker compose run --rm migration up --dir /migrations
 
 migrate-down:
-	docker compose run --rm migration down
+	docker compose run --rm migration down --dir /migrations
 
 migrate-status:
-	docker compose run --rm migration status
+	docker compose run --rm migration status --dir /migrations
