update: add git pull --rebase before pushing Swagger docs

--- a/.github/workflows/updateSwagger.yml
+++ b/.github/workflows/updateSwagger.yml
@@ -36,6 +36,7 @@ jobs:
             echo "No changes to commit"
           else
             git commit -m "update: Swagger docs"
+            git pull --rebase origin main
             git push origin HEAD:main
           fi
         env:
