--- a/.github/workflows/updateSwagger.yml
+++ b/.github/workflows/updateSwagger.yml
@@ -25,7 +25,9 @@ jobs:
         run: go install github.com/swaggo/swag/cmd/swag@latest
 
       - name: Generate Swagger docs
-        run: swag init --parseDependency --parseInternal
+        run: |
+          git branch develop
+          swag init --parseDependency --parseInternal
 
       - name: Commit and push changes
         run: |
@@ -36,8 +38,7 @@ jobs:
             echo "No changes to commit"
           else
             git commit -m "update: Swagger docs"
-            git pull --rebase origin main
-            git push origin HEAD:main
+            git push 
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
