--- a/.github/workflows/updateSwagger.yml
+++ b/.github/workflows/updateSwagger.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          ref: main
 
       - name: Set up Go
         uses: actions/setup-go@v2
@@ -36,9 +38,9 @@ jobs:
           if git diff --cached --quiet; then
             echo "No changes to commit"
           else
-            git branch develop
             git commit -m "update: Swagger docs"
-            git push 
+            git pull --rebase origin main
+            git push origin HEAD:main
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
