--- a/.github/workflows/updateSwagger.yml
+++ b/.github/workflows/updateSwagger.yml
@@ -23,6 +23,12 @@ jobs:
         with:
           go-version: '1.22.2'
 
+      - name: Install dependencies
+        run: go mod download
+
+      - name: Run tests
+        run: go test ./...
+
       - name: Install swag
         run: go install github.com/swaggo/swag/cmd/swag@latest
 
