--- a/.github/workflows/updateSwagger.yml
+++ b/.github/workflows/updateSwagger.yml
@@ -23,12 +23,6 @@ jobs:
         with:
           go-version: '1.22.2'
 
-      - name: Install dependencies
-        run: go mod download
-
-      - name: Run tests
-        run: go test ./...
-
       - name: Install swag
         run: go install github.com/swaggo/swag/cmd/swag@latest
 
@@ -44,8 +38,16 @@ jobs:
             echo "No changes to commit"
           else
             git commit -m "update: Swagger docs"
-            git pull --rebase origin develop
-            git push origin HEAD:develop
-          fi
+            git checkout -b update-swagger-docs
+            git push origin update-swagger-docs  # 変更を一時的なブランチにプッシュ
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: update-swagger-docs
+          title: 'Update Swagger docs'
+          body: 'This PR updates the Swagger documentation.'
+          base: develop
