--- a/.github/workflows/updateSwagger.yml
+++ b/.github/workflows/updateSwagger.yml
@@ -39,7 +39,7 @@ jobs:
           else
             git commit -m "update: Swagger docs"
             git switch -c update/swagger-docs
-            git push 
+            git push --set-upstream origin update/swagger-docs
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
