--- a/.github/workflows/updateSwagger.yml
+++ b/.github/workflows/updateSwagger.yml
@@ -41,6 +41,7 @@ jobs:
             git commit -m "update: Swagger docs"
             git push --set-upstream origin update/swagger-docs
             git push origin update/swagger-docs
+            echo "Pushed changes to update/swagger-docs"
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
