--- a/.github/workflows/updateSwagger.yml
+++ b/.github/workflows/updateSwagger.yml
@@ -15,8 +15,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-        with:
-          ref: develop
 
       - name: Set up Go
         uses: actions/setup-go@v2
@@ -33,13 +31,12 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add -A
+          git add docs
           if git diff --cached --quiet; then
             echo "No changes to commit"
           else
-            git switch -c update/swagger-docs
             git commit -m "update: Swagger docs"
-            git push --set-upstream origin update/swagger-docs
+            git branch update/swagger-docs
             git push origin update/swagger-docs
             echo "Pushed changes to update/swagger-docs"
           fi
