--- a/migrations/docker-compose.yml
+++ b/migrations/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - ./sql:/migrations
     environment:
       GOOSE_DRIVER: postgres
-      GOOSE_DBSTRING: "postgres://app:password@db:5432/app?sslmode=disable"
+      GOOSE_DBSTRING: 'postgres://app:password@db:5432/app?sslmode=disable'
     networks:
       - curlarc
 
